# elexousia-weather-app

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  .env.example  Dockerfile  get_schemas.py  install.ps1  pyproject.toml  run.py  run_migration.py  start.ps1  test_db_connection.py  test_oauth.py  test_retry.py  test_session.py  test_setup.py
backend/app/: main.py
backend/app/agent/: llm_provider.py  prompts.py  weather_agent.py
backend/app/agent/tools/: city_resolver.py  weather_tools.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  chips.py  conversations.py  health.py  locations.py  notifications.py  saved_locations.py  search.py  search_history.py  weather.py
backend/app/core/: config.py  exceptions.py  logging_config.py  oauth.py  security.py
backend/app/infrastructure/cache/: memory_cache.py
backend/app/infrastructure/database/: models.py  session.py
backend/app/infrastructure/repositories/: conversation_repository.py  location_repository.py  search_history_repository.py  user_repository.py  weather_repository.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/migrations/: 004_search_history.sql  005_saved_locations.sql
backend/app/schemas/: user.py
backend/app/tests/integration/: test_auth_endpoints.py  test_cors.py  test_docker_health.py  test_middleware.py  test_phase4_endpoints.py  test_rate_limiting.py  test_weather_endpoints.py
backend/app/tests/unit/: test_city_resolver.py  test_conversation_repository.py  test_location_repository.py  test_security.py  test_user_repository.py  test_wear_logic.py  test_weather_tools.py
backend/migrations/scripts/: 01_load_cities.py  02_seed_aliases.py  03e_fast_embed.py
backend/postman/: Elexousia-Weather-Phase-1.json  Elexousia-Weather-Phase-2.json  Elexousia-Weather-Phase-3.json  Elexousia-Weather-Phase-4.json
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/integration/: test_vector.py
frontend/: .env.example  Dockerfile  chatbot.cjs  index.html  nginx.conf  note  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/public/: site.webmanifest
nginx/: nginx.conf
(+36 files in other folders)
